--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <!-- navbar ends here  -->
     <div class="container  bg-danger d-flex flex-warp justify-content-around">
         <div class="card mb-4" style="width: 18rem;">
-            <img src="/EL.jpg" class="card-img-top" alt="...">
+            <img src="EL.jpg" class="card-img-top" alt="...">
             <div class="card-body">
                 <h5 class="card-title">Tesla</h5>
                 <p class="card-text">thazhe thott nokk</p>
@@ -79,7 +79,7 @@
         </div>
        
         <div class="card mb-4" style="width: 18rem;">
-            <img src="/EL.jpg" class="card-img-top" alt="...">
+            <img src="EL.jpg" class="card-img-top" alt="...">
             <div class="card-body">
                 <h5 class="card-title">Tesla</h5>
                 <p class="card-text">thazhe thott nokk</p>
@@ -88,14 +88,14 @@
         </div>
        
         <div class="card mb-4" style="width: 18rem;">
-            <img src="/EL.jpg" class="card-img-top" alt="...">
+            <img src="EL.jpg" class="card-img-top" alt="...">
             <div class="card-body">
                 <h5 class="card-title">Tesla</h5>
                 <p class="card-text">thazhe thott nokk</p>
                 <a href="#" class="btn btn-primary">Follow me</a>
             </div>       
             <div class="card mb-4" style="width: 18rem;">
-                <img src="/EL.jpg" class="card-img-top" alt="...">
+                <img src="EL.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">Tesla</h5>
                     <p class="card-text">thazhe thott nokk</p>
@@ -105,7 +105,7 @@
         </div>
 
         <div class="card mb-4" style="width: 18rem;">
-            <img src="/EL.jpg" class="card-img-top" alt="...">
+            <img src="EL.jpg" class="card-img-top" alt="...">
             <div class="card-body">
                 <h5 class="card-title">Tesla</h5>
                 <p class="card-text">thazhe thott nokk</p>
@@ -113,7 +113,7 @@
             </div>
         </div>
         <div class="card mb-4" style="width: 18rem;">
-            <img src="/EL.jpg" class="card-img-top" alt="...">
+            <img src="EL.jpg" class="card-img-top" alt="...">
             <div class="card-body">
                 <h5 class="card-title">Tesla</h5>
                 <p class="card-text">thazhe thott nokk</p>
