--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
             <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img src="/tim.jpg" class="d-block w-100" alt="...">
+                    <img src="tim.jpg" class="d-block w-100" alt="...">
                   </div>
                   <div class="carousel-item">
-                    <img src="/vad.jpg" class="d-block w-100" alt="...">
+                    <img src="vad.jpg" class="d-block w-100" alt="...">
                   </div>
                   <div class="carousel-item">
-                    <img src="/bat.webp" class="d-block w-100" alt="...">
+                    <img src="bat.webp" class="d-block w-100" alt="...">
                   </div>
                 </div>
               </div>
